fix layout issues in text room component and improve attachment previews in messages

--- a/src/app/server-page/text-room/text-room.component.scss
+++ b/src/app/server-page/text-room/text-room.component.scss
@@ -36,6 +36,7 @@
 
 
 .message{
+  margin-bottom: 0.5rem; // TODO: FIX GAPS ON .messages
   gap: 0.5rem;
   display: flex;
   flex-direction: row;
@@ -89,6 +90,8 @@
       width: 100%;
       display: flex;
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
     &-message{
       margin: 0.4rem 0 0 0;
@@ -121,7 +124,78 @@
   }
 }
 
+// .msg-attachments{
 
+
+//   &
+// }
+
+.msg-attachments{
+  // background-color: #707070;
+  display: grid;
+  // max 4 items in a row
+  grid-template-columns: repeat(auto-fit, minmax(7rem, 12rem));
+  grid-gap: 1rem;
+
+}
+.attachment {
+  // background-color: #707070;
+  height: 7rem;
+  width: 12rem;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+
+  &-img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-video{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-file{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #2b2b2b;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    color: var(--white);
+    font-size: 0.5rem;
+    font-weight: bold;
+
+    &-icon{
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+
+}
+
+
+.attachments-preview{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  padding: 0.5rem 0 0 0.5rem;
+  width: calc(100% - 2rem);
+  margin-left: 1rem;
+  margin-right: 1rem;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 
 .input{
   background-color: var(--dark-grey);
@@ -179,21 +253,7 @@
   }
 
 
-  & .attachments-preview{
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    padding: 0.5rem 0 0 0.5rem;
-    width: calc(100% - 2rem);
-    margin-left: 1rem;
-    margin-right: 1rem;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
 }
 
 
